@@ -1,5 +1,11 @@
 2005-09-07  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/languages.h:
+
+	Remove duplicate entries.
+
+2005-09-07  Christian Persch  <chpe@cvs.gnome.org>
+
 	* configure.ac:
 	* embed/mozilla/EphyBrowser.cpp:
 
